better width % for container to avoid overlapping with meetup api linkage

--- a/picturethis/picturethis.css
+++ b/picturethis/picturethis.css
@@ -50,7 +50,7 @@ a:link img, a:visited img {
 }
 h1 { font-size:20px; font-weight:normal; text-shadow: #333 2px -1px 2px; }
 h1 span { font-weight:bold; font-size:90%;}
-#container { width:80%; margin:1em auto;}
+#container { width:72%; margin:1em auto;}
 #photos { list-style:none; }
 #photos li {
   display:hidden;
